Bug 480434 - Graphical line glitches seen when horizontal panels in Auto-Hide" or "Dodge Windows" mode transition to hidden state
Summary: Graphical line glitches seen when horizontal panels in Auto-Hide" or "Dodge W...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 5.92.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2024-01-28 14:43 UTC by Dashon
Modified: 2024-02-20 21:23 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
Video of the panels. (2.04 MB, video/webm)
2024-01-28 14:43 UTC, Dashon
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dashon 2024-01-28 14:43:02 UTC
SUMMARY
Whenever a hidden panel appears or disappears, horizontal lines appear a few pixels inwards on each side of the panel. This makes the panel feel kind of glitchy, but ultimately it is a small visual defect.


STEPS TO REPRODUCE
1. Set panel to autohide.
2. Bring mouse to the edge of screen that contains hidden panel in order to show it.


OBSERVED RESULT
When the panel appears, there are two horizontal lines that seem to appear and disappear causing a visual defect.

EXPECTED RESULT
Panel should remain consistent when sliding in and out.

SOFTWARE/OS VERSIONS
Operating System: EndeavourOS 
KDE Plasma Version: 5.92.0
KDE Frameworks Version: 5.248.0
Qt Version: 6.7.0
Kernel Version: 6.7.1-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 5800X 8-Core Processor
Memory: 62.7 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 3080/PCIe/SSE2
Manufacturer: Micro-Star International Co., Ltd.
Product Name: MS-7C95
System Version: 1.0
Comment 1 Dashon 2024-01-28 14:43:45 UTC
Created attachment 165308 [details]
Video of the panels.
Comment 2 Doug 2024-01-28 17:59:55 UTC
Can confirm on KDE Neon Testing, Plasma 5.92.90, Frameworks 2.49.0, Qt 6.6.1
Comment 3 Nate Graham 2024-01-29 20:14:40 UTC
Can reproduce with horizontal panels; vertical panels seem to be unaffected.

Happens in my testing with Breeze Light as well as Breeze Dark, though the glitch is more obvious with Breeze Dark.
Comment 4 Bug Janitor Service 2024-01-30 13:04:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5068
Comment 5 Marco Martin 2024-02-13 10:07:28 UTC
*** Bug 481197 has been marked as a duplicate of this bug. ***
Comment 6 Vlad Zahorodnii 2024-02-19 11:22:06 UTC
Git commit 7732f0e56b0a4775d3b577a5d860c307184c8189 by Vlad Zahorodnii, on behalf of Niccolò Venerandi.
Committed on 19/02/2024 at 11:11.
Pushed by vladz into branch 'master'.

Ensure that translations never change the size of a contrast effect / blur regions

M  +1    -8    src/plugins/backgroundcontrast/contrast.cpp
M  +1    -8    src/plugins/blur/blur.cpp

https://invent.kde.org/plasma/kwin/-/commit/7732f0e56b0a4775d3b577a5d860c307184c8189
Comment 7 Vlad Zahorodnii 2024-02-19 11:38:28 UTC
Git commit dc05316de83ce9a651ead74228b07f9278bb093a by Vlad Zahorodnii, on behalf of Niccolò Venerandi.
Committed on 19/02/2024 at 11:23.
Pushed by vladz into branch 'Plasma/6.0'.

Ensure that translations never change the size of a contrast effect / blur regions


(cherry picked from commit 7732f0e56b0a4775d3b577a5d860c307184c8189)

M  +1    -8    src/plugins/backgroundcontrast/contrast.cpp
M  +1    -8    src/plugins/blur/blur.cpp

https://invent.kde.org/plasma/kwin/-/commit/dc05316de83ce9a651ead74228b07f9278bb093a