Ensure that translations never change the size of a contrast effect / blur regions

BUG:480434