src/plugins/blur/blur.cpp
@@ -545,8 +545,7 @@ void BlurEffect::blur(const RenderTarget &renderTarget, const RenderViewport &vi
         for (const QRect &r : blurShape) {
             const QRectF t = QRectF(r).translated(data.xTranslation(), data.yTranslation());
             const QPoint topLeft(std::ceil(t.x()), std::ceil(t.y()));
-            const QPoint bottomRight(std::floor(t.x() + t.width() - 1), std::floor(t.y() + t.height() - 1));
-            translated |= QRect(topLeft, bottomRight);
+            translated |= QRect(topLeft, r.size());
         }
         blurShape = translated;
     }
